<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_eq"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/EQtab" />
    <item
        android:id="@+id/nav_fm_curve"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/FMtab" />
    <item
        android:id="@+id/nav_delays"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/DLtab" />
    <item
        android:id="@+id/nav_other"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/OTtab" />
    <item
        android:icon="@android:drawable/ic_menu_mylocation"
        android:id="@+id/nav_gala"
        android:title="@string/GLtab"/>
</menu>